docs: add bolt.diy tutorial and update catalog

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 91
+    "root_only": 92
   },
-  "tutorial_count": 91,
+  "tutorial_count": 92,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -175,6 +175,25 @@
       "has_index": true,
       "name": "bentoml-tutorial",
       "path": "tutorials/bentoml-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "bolt-diy-tutorial",
+      "path": "tutorials/bolt-diy-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
