docs: add cline tutorial and refresh catalog counts

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 92
+    "root_only": 93
   },
-  "tutorial_count": 92,
+  "tutorial_count": 93,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -346,6 +346,25 @@
       "has_index": true,
       "name": "clickhouse-tutorial",
       "path": "tutorials/clickhouse-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "cline-tutorial",
+      "path": "tutorials/cline-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
