docs: add roo code tutorial and refresh catalog

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 93
+    "root_only": 94
   },
-  "tutorial_count": 93,
+  "tutorial_count": 94,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1507,6 +1507,25 @@
       "has_index": true,
       "name": "react-fiber-internals",
       "path": "tutorials/react-fiber-internals",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "roo-code-tutorial",
+      "path": "tutorials/roo-code-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
