--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 95
+    "root_only": 96
   },
-  "tutorial_count": 95,
+  "tutorial_count": 96,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -631,6 +631,25 @@
       "has_index": true,
       "name": "gpt-oss-tutorial",
       "path": "tutorials/gpt-oss-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "hapi-tutorial",
+      "path": "tutorials/hapi-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
