--- a/.github/workflows/docs-health.yml
+++ b/.github/workflows/docs-health.yml
@@ -29,3 +29,13 @@ jobs:
         run: |
           python scripts/generate_tutorial_manifest.py --output /tmp/tutorial-manifest.json
           diff -u tutorials/tutorial-manifest.json /tmp/tutorial-manifest.json
+
+      - name: Validate Discoverability Assets Are Current
+        run: |
+          python scripts/generate_discoverability_assets.py \
+            --output-json /tmp/tutorial-index.json \
+            --llms /tmp/llms.txt \
+            --llms-full /tmp/llms-full.txt
+          diff -u discoverability/tutorial-index.json /tmp/tutorial-index.json
+          diff -u llms.txt /tmp/llms.txt
+          diff -u llms-full.txt /tmp/llms-full.txt
