--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 96
+    "root_only": 98
   },
-  "tutorial_count": 96,
+  "tutorial_count": 98,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1029,6 +1029,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "mastra-tutorial",
+      "path": "tutorials/mastra-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "mcp-python-sdk-tutorial",
       "path": "tutorials/mcp-python-sdk-tutorial",
       "structure": "root_only",
@@ -1317,6 +1336,25 @@
       "has_index": true,
       "name": "openclaw-tutorial",
       "path": "tutorials/openclaw-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "opencode-tutorial",
+      "path": "tutorials/opencode-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
