--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 98
+    "root_only": 100
   },
-  "tutorial_count": 98,
+  "tutorial_count": 100,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -42,6 +42,25 @@
       "has_index": true,
       "name": "agentgpt-tutorial",
       "path": "tutorials/agentgpt-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "agno-tutorial",
+      "path": "tutorials/agno-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -806,6 +825,25 @@
       "structure": "root_only",
       "top_level_chapter_count": 9,
       "total_numbered_chapter_count": 9
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "langflow-tutorial",
+      "path": "tutorials/langflow-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
     },
     {
       "chapter_numbers": [
