docs: import openskills and codemachine tutorials

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 104
+    "root_only": 106
   },
-  "tutorial_count": 104,
+  "tutorial_count": 106,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -384,6 +384,25 @@
       "has_index": true,
       "name": "cline-tutorial",
       "path": "tutorials/cline-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "codemachine-cli-tutorial",
+      "path": "tutorials/codemachine-cli-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -1450,6 +1469,25 @@
       "has_index": true,
       "name": "openhands-tutorial",
       "path": "tutorials/openhands-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "openskills-tutorial",
+      "path": "tutorials/openskills-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
