--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 106
+    "root_only": 108
   },
-  "tutorial_count": 106,
+  "tutorial_count": 108,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1505,6 +1505,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "opensrc-tutorial",
+      "path": "tutorials/opensrc-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "outlines-tutorial",
       "path": "tutorials/outlines-tutorial",
       "structure": "root_only",
@@ -1754,6 +1773,25 @@
       "has_index": true,
       "name": "semantic-kernel-tutorial",
       "path": "tutorials/semantic-kernel-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "shotgun-tutorial",
+      "path": "tutorials/shotgun-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
