--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 108
+    "root_only": 109
   },
-  "tutorial_count": 108,
+  "tutorial_count": 109,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -650,6 +650,25 @@
       "has_index": true,
       "name": "firecrawl-tutorial",
       "path": "tutorials/firecrawl-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "fireproof-tutorial",
+      "path": "tutorials/fireproof-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
