--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 111
+    "root_only": 113
   },
-  "tutorial_count": 111,
+  "tutorial_count": 113,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -327,6 +327,25 @@
       "has_index": true,
       "name": "claude-quickstarts-tutorial",
       "path": "tutorials/claude-quickstarts-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "claude-squad-tutorial",
+      "path": "tutorials/claude-squad-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -1259,6 +1278,25 @@
       "has_index": true,
       "name": "mem0-tutorial",
       "path": "tutorials/mem0-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "mistral-vibe-tutorial",
+      "path": "tutorials/mistral-vibe-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
