docs: add serena and onlook tutorials with roadmap update

--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 119
+    "root_only": 121
   },
-  "tutorial_count": 119,
+  "tutorial_count": 121,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1524,6 +1524,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "onlook-tutorial",
+      "path": "tutorials/onlook-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "open-webui-tutorial",
       "path": "tutorials/open-webui-tutorial",
       "structure": "root_only",
@@ -1963,6 +1982,25 @@
       "has_index": true,
       "name": "semantic-kernel-tutorial",
       "path": "tutorials/semantic-kernel-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "serena-tutorial",
+      "path": "tutorials/serena-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
