--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,10 +3,29 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 125
+    "root_only": 127
   },
-  "tutorial_count": 125,
+  "tutorial_count": 127,
   "tutorials": [
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "adk-python-tutorial",
+      "path": "tutorials/adk-python-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
     {
       "chapter_numbers": [
         "01",
@@ -2134,6 +2153,25 @@
       "has_index": true,
       "name": "smolagents-tutorial",
       "path": "tutorials/smolagents-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "strands-agents-tutorial",
+      "path": "tutorials/strands-agents-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
