--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 129
+    "root_only": 131
   },
-  "tutorial_count": 129,
+  "tutorial_count": 131,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -344,6 +344,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "chrome-devtools-mcp-tutorial",
+      "path": "tutorials/chrome-devtools-mcp-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "cipher-tutorial",
       "path": "tutorials/cipher-tutorial",
       "structure": "root_only",
@@ -498,6 +517,25 @@
       "has_index": true,
       "name": "codex-analysis-platform",
       "path": "tutorials/codex-analysis-platform",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "codex-cli-tutorial",
+      "path": "tutorials/codex-cli-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
