--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 131
+    "root_only": 133
   },
-  "tutorial_count": 131,
+  "tutorial_count": 133,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -1485,6 +1485,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "mini-swe-agent-tutorial",
+      "path": "tutorials/mini-swe-agent-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "mistral-vibe-tutorial",
       "path": "tutorials/mistral-vibe-tutorial",
       "structure": "root_only",
@@ -2039,6 +2058,25 @@
       "has_index": true,
       "name": "quivr-tutorial",
       "path": "tutorials/quivr-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "qwen-agent-tutorial",
+      "path": "tutorials/qwen-agent-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
