--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 133
+    "root_only": 135
   },
-  "tutorial_count": 133,
+  "tutorial_count": 135,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -61,6 +61,25 @@
       "has_index": true,
       "name": "agentgpt-tutorial",
       "path": "tutorials/agentgpt-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "agents-md-tutorial",
+      "path": "tutorials/agents-md-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -1792,6 +1811,25 @@
       "has_index": true,
       "name": "openclaw-tutorial",
       "path": "tutorials/openclaw-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "opencode-ai-legacy-tutorial",
+      "path": "tutorials/opencode-ai-legacy-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
