--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 141
+    "root_only": 143
   },
-  "tutorial_count": 141,
+  "tutorial_count": 143,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -496,6 +496,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "claude-plugins-official-tutorial",
+      "path": "tutorials/claude-plugins-official-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "claude-quickstarts-tutorial",
       "path": "tutorials/claude-quickstarts-tutorial",
       "structure": "root_only",
@@ -650,6 +669,25 @@
       "has_index": true,
       "name": "comfyui-tutorial",
       "path": "tutorials/comfyui-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "compound-engineering-plugin-tutorial",
+      "path": "tutorials/compound-engineering-plugin-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
