--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 145
+    "root_only": 147
   },
-  "tutorial_count": 145,
+  "tutorial_count": 147,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -251,6 +251,25 @@
       "has_index": true,
       "name": "autogen-tutorial",
       "path": "tutorials/autogen-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "awesome-claude-code-tutorial",
+      "path": "tutorials/awesome-claude-code-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
@@ -2324,6 +2343,25 @@
       "has_index": true,
       "name": "react-fiber-internals",
       "path": "tutorials/react-fiber-internals",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "refly-tutorial",
+      "path": "tutorials/refly-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
