--- a/tutorials/tutorial-manifest.json
+++ b/tutorials/tutorial-manifest.json
@@ -3,9 +3,9 @@
     "docs_only": 0,
     "index_only": 0,
     "mixed": 0,
-    "root_only": 149
+    "root_only": 151
   },
-  "tutorial_count": 149,
+  "tutorial_count": 151,
   "tutorials": [
     {
       "chapter_numbers": [
@@ -287,6 +287,25 @@
       ],
       "docs_chapter_count": 0,
       "has_index": true,
+      "name": "awesome-claude-skills-tutorial",
+      "path": "tutorials/awesome-claude-skills-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
       "name": "beads-tutorial",
       "path": "tutorials/beads-tutorial",
       "structure": "root_only",
@@ -460,6 +479,25 @@
       "has_index": true,
       "name": "cipher-tutorial",
       "path": "tutorials/cipher-tutorial",
+      "structure": "root_only",
+      "top_level_chapter_count": 8,
+      "total_numbered_chapter_count": 8
+    },
+    {
+      "chapter_numbers": [
+        "01",
+        "02",
+        "03",
+        "04",
+        "05",
+        "06",
+        "07",
+        "08"
+      ],
+      "docs_chapter_count": 0,
+      "has_index": true,
+      "name": "claude-code-router-tutorial",
+      "path": "tutorials/claude-code-router-tutorial",
       "structure": "root_only",
       "top_level_chapter_count": 8,
       "total_numbered_chapter_count": 8
